# PixelPerfect

./: .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: build-package-publish.yml  test.yml  vulnow.yml
backend/: MANIFEST.in  development.env  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
backend/pixelperfect/: __init__.py  __main__.py  app.py  utils.py
backend/pixelperfect/alembic/: env.py
backend/pixelperfect/alembic/versions/: 2152d60aa2a1_default_users.py  b908084b95fc_user_sessions.py  e8ce41d90551_initial.py
backend/pixelperfect/api/: api.py
backend/pixelperfect/api/endpoints/: albums.py  health.py  login.py  photos.py  users.py
backend/pixelperfect/core/: schemas.py  settings.py
backend/pixelperfect/db/: crud.py  database.py  models.py
backend/pixelperfect/security/: middleware.py
backend/tests/: fixtures.py  test_api.py
docker/: entrypoint.sh
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  interfaces.ts  models.ts
frontend/src/app/components/modal-album-add/: modal-album-add.component.html  modal-album-add.component.spec.ts  modal-album-add.component.ts
frontend/src/app/components/modal-album-edit/: modal-album-edit.component.html  modal-album-edit.component.spec.ts  modal-album-edit.component.ts
frontend/src/app/components/modal-delete-confirmation/: modal-delete-confirmation.component.html  modal-delete-confirmation.component.spec.ts  modal-delete-confirmation.component.ts
frontend/src/app/components/modal-photo-upload/: modal-photo-upload.component.html  modal-photo-upload.component.spec.ts  modal-photo-upload.component.ts
frontend/src/app/components/navbar/: navbar.component.html  navbar.component.ts
frontend/src/app/components/toast-notification/: toast-notification.component.css  toast-notification.component.html  toast-notification.component.ts
frontend/src/app/pages/album/: album.component.html  album.component.ts
frontend/src/app/pages/login/: login.component.html  login.component.ts
frontend/src/app/pages/main/: main.component.html  main.component.ts
frontend/src/app/services/: notification.service.ts  pixelperfect.service.spec.ts  pixelperfect.service.ts  share.service.ts
frontend/src/assets/: site.webmanifest
frontend/src/environments/: environment.development.ts  environment.ts
