[build-system]
requires = ["setuptools >= 72.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelperfect"
version = "0.2.4"
requires-python = ">= 3.10"
dependencies = [
    "alembic==1.15.2",
    "argon2-cffi==23.1.0",
    "cachetools==5.5.2",
    "click==8.2.0",
    "cloudpathlib==0.21.1",
    "exif==1.6.1",
    "fastapi==0.115.12",
    "pillow==11.2.1",
    "pydantic-settings==2.9.1",
    "python-multipart==0.0.20",
    "smart-open==7.1.0",
    "uvicorn[standard]==0.34.2",
    "SQLAlchemy==2.0.41",
    "sqlmodel==0.0.24",
]

[project.optional-dependencies]
all = ["pixelperfect[mysql]", "pixelperfect[postgresql]", "pixelperfect[s3]"]
dev = ["bump-my-version==1.1.3", "httpx==0.28.1", "pytest==8.3.5", "tox==4.26.0", "Faker==37.3.0"]
mysql = ["PyMySQL[rsa]==1.1.1"]
postgresql = ["psycopg2-binary==2.9.10"]
s3 = ["smart-open[s3]"]

[project.scripts]
pixelperfect = "pixelperfect.__main__:main"

[tool.setuptools.packages.find]
include = ["pixelperfect", "pixelperfect.*"]

[tool.bumpversion]
current_version = "0.2.4"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "pixelperfect/__init__.py"
search = "__version__ = '{current_version}'"
replace = "__version__ = '{new_version}'"

[tool.tox]
requires = ["tox>=4.23"]
env_list = ["3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "run unit tests"
extras = ["all", "dev"]
set_env = {BASE_DIRECTORY="{envtmpdir}", IMAGE_DIRECTORY="{envtmpdir}/images"}
commands = [["pytest", "tests"]]
