[build-system]
requires = ["setuptools>=72.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pixelperfect"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "alembic==1.15.2",
    "argon2-cffi==23.1.0",
    "cachetools==5.5.2",
    "click==8.2.0",
    "cloudpathlib==0.21.1",
    "exif==1.6.1",
    "fastapi==0.115.12",
    "pillow==11.3.0",
    "pydantic-settings==2.9.1",
    "python-multipart==0.0.22",
    "smart-open==7.1.0",
    "uvicorn[standard]==0.34.2",
    "SQLAlchemy==2.0.41",
    "sqlmodel==0.0.24",
]

[project.optional-dependencies]
all = ["pixelperfect[mysql]", "pixelperfect[postgresql]", "pixelperfect[s3]"]
mysql = ["PyMySQL[rsa]==1.1.1"]
postgresql = ["psycopg2-binary==2.9.10"]
s3 = ["smart-open[s3]"]

[dependency-groups]
dev = ["setuptools", "setuptools-scm", {include-group = "test"}]
test = ["httpx==0.28.1", "pytest==8.3.5", "tox==4.26.0", "Faker==37.3.0"]

[project.scripts]
pixelperfect = "pixelperfect.__main__:main"

[tool.setuptools.packages.find]
include = ["pixelperfect", "pixelperfect.*"]

[tool.setuptools_scm]
root = ".."

[tool.tox]
requires = ["tox>=4.23"]
env_list = ["3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
description = "run unit tests"
dependency_groups = ["test"]
extras = ["all"]
set_env = {BASE_DIRECTORY="{envtmpdir}", IMAGE_DIRECTORY="{envtmpdir}/images"}
commands = [["pytest", "tests"]]
